Fix jumping of twitter widget when new tweet is shown
The tweet was rendered too low and then popped up as it faded into view. This happened when there was a delay loading the avatar image. The image dimensions weren't defined in the layout so the text would site at the bottom of the widget before the image loaded.

--- a/widgets/comments/comments.scss
+++ b/widgets/comments/comments.scss
@@ -31,6 +31,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   .comment-container {
     display: none;
     position: relative;
+    
+    img { height: 73px; width: 73px; }
   }
   
   .comment {
